Refactor contact list layout to use grid system and remove deprecated JavaScript file; add authentication form styles and script for improved user experience

--- a/Client/index.html
+++ b/Client/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact List SPA</title>
     <link rel="stylesheet" href="SAP-contact_list.css" />
-    <script src="SPA-home.js"></script>
+    <link rel="stylesheet" href="auth-forms.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <nav id="nav-bar" class="hidden">
