Add search functionality to contact list; enhance UI with search bar and improve response handling

--- a/Client/index.html
+++ b/Client/index.html
@@ -36,6 +36,13 @@
       <div id="read" class="template-section hidden">
         <header>
           <h1>Contact List</h1>
+          <div class="search-bar">
+            <input
+              type="text"
+              id="searchInput"
+              placeholder="Search contact by name"
+            />
+            <button onclick="searchContact()">Search</button>
           <div class="header-actions">
             <button
               class="add-contact-button"
