--- a/Client/index.html
+++ b/Client/index.html
@@ -14,6 +14,7 @@
     </nav>
 
     <div class="container">
+      <button id="retryButton" class="hidden retryButton" onclick="handleRetryClick()">Retry</button>
       <div id="create" class="template-section hidden">
         <h2>Add Contact</h2>
         <input type="text" id="contactName" placeholder="Enter contact name" />
