--- a/Client/index.html
+++ b/Client/index.html
@@ -14,9 +14,20 @@
     </nav>
 
     <div class="container">
-      <div class = "retry-container">
-        <button id="retryButton" class="hidden retryButton" onclick="handleRetryClick()">Retry</button>
-        <img id="loader" class="hidden loader" src="../Client/media/icons8-loader-50.png" alt="retry" />
+      <div class="retry-container">
+        <button
+          id="retryButton"
+          class="hidden retryButton"
+          onclick="handleRetryClick()"
+        >
+          Retry
+        </button>
+        <img
+          id="loader"
+          class="hidden loader"
+          src="../Client/media/icons8-loader-50.png"
+          alt="retry"
+        />
       </div>
       <div id="create" class="template-section hidden">
         <h2>Add Contact</h2>
@@ -38,8 +49,8 @@
       </div>
 
       <div id="read" class="template-section hidden">
+        <h1>Contact List</h1>
         <header>
-          <h1>Contact List</h1>
           <div class="search-bar">
             <input
               type="text"
@@ -47,6 +58,7 @@
               placeholder="Search contact by name"
             />
             <button onclick="searchContact()">Search</button>
+          </div>
           <div class="header-actions">
             <button
               class="add-contact-button"
