Refactor contact list styles; update layout to use grid for better alignment and responsiveness, and enhance loader implementation.

--- a/Client/index.html
+++ b/Client/index.html
@@ -22,12 +22,11 @@
         >
           Retry
         </button>
-        <img
+        <div
           id="loader"
           class="hidden loader"
-          src="../Client/media/icons8-loader-50.png"
           alt="retry"
-        />
+          > </div>
       </div>
       <div id="create" class="template-section hidden">
         <h2>Add Contact</h2>
