--- a/Client/index.html
+++ b/Client/index.html
@@ -22,136 +22,157 @@
         >
           Retry
         </button>
-        <div
-          id="loader"
-          class="hidden loader"
-          alt="retry"
-          > </div>
-      </div>
-      <div id="create" class="template-section hidden">
-        <h2>Add Contact</h2>
-        <input type="text" id="contactName" placeholder="Enter contact name" />
-        <input
-          type="text"
-          id="contactPhone"
-          placeholder="Enter contact phone"
-        />
-        <input
-          type="email"
-          id="contactEmail"
-          placeholder="Enter contact email"
-        />
-        <div class="actions">
-          <button onclick="addContact()">Add</button>
-          <button onclick="showTemplate('read')">Cancel</button>
-        </div>
+        <div id="loader" class="hidden loader" alt="retry"></div>
       </div>
 
-      <div id="read" class="template-section hidden">
-        <h1>Contact List</h1>
-        <header>
-          <div class="search-bar">
-            <input
-              type="text"
-              id="searchInput"
-              placeholder="Search contact by name"
-            />
-            <button onclick="searchContact()">Search</button>
-          </div>
-          <div class="header-actions">
-            <button
-              class="add-contact-button"
-              onclick="showTemplate('create')"
-            ></button>
-          </div>
-        </header>
-        <div class="contact-headers">
-          <span class="header-tel">Tel</span>
-          <span class="header-name">Name</span>
-          <span class="header-email">Email</span>
-        </div>
-        <div id="contactList"></div>
-      </div>
+      <div id="content"></div>
 
-      <div id="edit" class="template-section hidden">
-        <h2>Edit Contact</h2>
-        <input type="text" id="editContactName" placeholder="Enter new name" />
-        <input
-          type="text"
-          id="editContactPhone"
-          placeholder="Enter new phone"
-        />
-        <input
-          type="email"
-          id="editContactEmail"
-          placeholder="Enter new email"
-        />
-        <div class="actions">
-          <button class="actions-butten" onclick="saveEditContact()">
-            Save
-          </button>
-          <button class="actions-butten" onclick="showTemplate('read')">
-            Cancel
-          </button>
-        </div>
-      </div>
-
-      <div id="signin" class="template-section">
-        <div class="form-container">
-          <h2>Login</h2>
-          <input type="text" id="username" placeholder="Enter username" />
-          <input type="password" id="password" placeholder="Enter password" />
-          <div class="actions">
-            <button onclick="login()">Login</button>
-            <button onclick="showTemplate('signup')">Signup</button>
-          </div>
-        </div>
-      </div>
-
-      <div id="signup" class="template-section hidden">
-        <div class="form-container">
-          <h2>Signup</h2>
-          <input type="text" id="signupUsername" placeholder="Enter username" />
+      <template id="create-template">
+        <div id="create" class="template-section">
+          <h2>Add Contact</h2>
           <input
-            type="password"
-            id="signupPassword"
-            placeholder="Enter password"
+            type="text"
+            id="contactName"
+            placeholder="Enter contact name"
+          />
+          <input
+            type="text"
+            id="contactPhone"
+            placeholder="Enter contact phone"
+          />
+          <input
+            type="email"
+            id="contactEmail"
+            placeholder="Enter contact email"
           />
           <div class="actions">
-            <button onclick="signup()">Signup</button>
-            <button onclick="showTemplate('signin')">Cancel</button>
+            <button onclick="addContact()">Add</button>
+            <button onclick="showTemplate('read')">Cancel</button>
           </div>
         </div>
-      </div>
-    </div>
+      </template>
 
-    <template id="contactTemplate">
-      <div class="contact-item">
-        <img
-          class="contact-avatar"
-          src="../Client/media/user-icon.png"
-          alt="user"
-        />
-        <div class="contact-info">
-          <span class="contact-phone"></span>
-          <span class="contact-name"></span>
-          <span class="contact-email"></span>
+      <template id="read-template">
+        <div id="read" class="template-section">
+          <h1>Contact List</h1>
+          <header>
+            <div class="search-bar">
+              <input
+                type="text"
+                id="searchInput"
+                placeholder="Search contact by name"
+              />
+              <button onclick="searchContact()">Search</button>
+            </div>
+            <div class="header-actions">
+              <button
+                class="add-contact-button"
+                onclick="showTemplate('create')"
+              ></button>
+            </div>
+          </header>
+          <div class="contact-headers">
+            <span class="header-tel">Tel</span>
+            <span class="header-name">Name</span>
+            <span class="header-email">Email</span>
+          </div>
+          <div id="contactList"></div>
         </div>
-        <div class="contact-actions">
-          <button
-            class="edit"
-            style="background-image: url(../Client/media/white\ edit.png)"
-            onclick="goToEditContact(event)"
-          ></button>
-          <button
-            class="delete"
-            style="
-              background-image: url(../Client/media/white\ garbage\ bin.png);
-            "
-            onclick="deleteContact(event)"
-          ></button>
+      </template>
+
+      <template id="edit-template">
+        <div id="edit" class="template-section">
+          <h2>Edit Contact</h2>
+          <input
+            type="text"
+            id="editContactName"
+            placeholder="Enter new name"
+          />
+          <input
+            type="text"
+            id="editContactPhone"
+            placeholder="Enter new phone"
+          />
+          <input
+            type="email"
+            id="editContactEmail"
+            placeholder="Enter new email"
+          />
+          <div class="actions">
+            <button class="actions-butten" onclick="saveEditContact()">
+              Save
+            </button>
+            <button class="actions-butten" onclick="showTemplate('read')">
+              Cancel
+            </button>
+          </div>
         </div>
-      </div>
-    </template>
+      </template>
+
+      <template id="signin-template">
+        <div id="signin" class="template-section">
+          <div class="form-container">
+            <h2>Login</h2>
+            <input type="text" id="username" placeholder="Enter username" />
+            <input type="password" id="password" placeholder="Enter password" />
+            <div class="actions">
+              <button onclick="login()">Login</button>
+              <button onclick="showTemplate('signup')">Signup</button>
+            </div>
+          </div>
+        </div>
+      </template>
+
+      <template id="signup-template">
+        <div id="signup" class="template-section">
+          <div class="form-container">
+            <h2>Signup</h2>
+            <input
+              type="text"
+              id="signupUsername"
+              placeholder="Enter username"
+            />
+            <input
+              type="password"
+              id="signupPassword"
+              placeholder="Enter password"
+            />
+            <div class="actions">
+              <button onclick="signup()">Signup</button>
+              <button onclick="showTemplate('signin')">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </template>
+
+      <template id="contact-template">
+        <div class="contact-item">
+          <img
+            class="contact-avatar"
+            src="../Client/media/user-icon.png"
+            alt="user"
+          />
+          <div class="contact-info">
+            <span class="contact-phone"></span>
+            <span class="contact-name"></span>
+            <span class="contact-email"></span>
+          </div>
+          <div class="contact-actions">
+            <button
+              class="edit"
+              style="background-image: url(../Client/media/white\ edit.png)"
+              onclick="goToEditContact(event)"
+            ></button>
+            <button
+              class="delete"
+              style="
+                background-image: url(../Client/media/white\ garbage\ bin.png);
+              "
+              onclick="deleteContact(event)"
+            ></button>
+          </div>
+        </div>
+      </template>
+    </div>
   </body>
 </html>
