Update index.html and add CSS/JS files for improved structure; implement auth form styles and display logic for templates.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact List SPA</title>
-    <link rel="stylesheet" href="/Client/SAP-contact_list.css" />
-    <link rel="stylesheet" href="/Client/auth-forms.css" />
-    <script src="/Client/script.js" type="module"></script>
+    <link rel="stylesheet" href="/Client/CSS/SAP-contact_list.css" />
+    <link rel="stylesheet" href="/Client/CSS/auth-forms.css" />
+    <script src="/Client/JS/logic_SPA.js" type="module"></script>
+    <script src="/Client/JS/display_SPA.js" type="module"></script>
   </head>
   <body>
     <nav id="nav-bar" class="hidden">
