--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/Client/media/icons8-phone-book-48.png"
+    />
     <title>Contact List SPA</title>
     <link rel="stylesheet" href="/Client/CSS/SAP-contact_list.css" />
     <link rel="stylesheet" href="/Client/CSS/auth-forms.css" />
